--- a/practice/templates/question/question_list.html
+++ b/practice/templates/question/question_list.html
@@ -1,9 +1,32 @@
-{% if question_list %}
-    <ul>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container my-3">
+    <table class="table">
+        <thread>
+            <tr class="thead-dark">
+                <th>번호</th>
+                <th>제목</th>
+                <th>작성일시</th>
+            </tr>
+        </thread>
+        <tbody>
+        {% if question_list %}
         {% for question in question_list %}
-            <li><a href="/detail/{{question.id}}"/>{{question.subject}}</a></li>
+        <tr>
+            <td>{{ loop.index }}</td>
+            <td>
+                <a href="{{ url_for('question.detail', question_id=question.id) }}"> {{ question.subject }}</a>
+            </td>
+            <td>{{ question.create_date }}</td>
+        </tr>
         {% endfor %}
-    </ul>
-{% else %}
-    <p> No Question </p>
-{% endif %}
+        {% else %}
+        <tr>
+            <td colspan="3"> No Question </td>
+        </tr>
+        {% endif %}
+        </tbody>
+    </table>
+    <a href="{{ url_for('question.create') }}" class="btn btn-primary">글 등록</a>
+</div>
+{% endblock %}
