--- a/practice/templates/question/question_detail.html
+++ b/practice/templates/question/question_detail.html
@@ -6,10 +6,17 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge badge-light p-2">
-                    {{ question.create_date|datetime }}
+                <div class="badge badge-light p-2 text-left text-secondary">
+                    <div class="mb-2"> {{ question.user.username }}</div>
+                    <div> {{ question.create_date|datetime }} </div>
                 </div>
             </div>
+            {% if g.user == question.user %}
+            <div class="my-3">
+                <a href="{{ url_for('question.modify', question_id=question.id ) }}" class="btn btn-sm btn-outline-secondary">수정</a>
+                <a href="{{ url_for('question.delete', question_id=question.id ) }}" class="delete btn btn-sm btn-outline-secondary">삭제</a>
+            </div>
+            {% endif %}
         </div>
     </div>
 
@@ -19,15 +26,25 @@
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+
             <div class="d-flex justify-content-end">
-                <div class="badge badge-light p-2">
-                    {{ answer.create_date|datetime }}
+                <div class="badge badge-light p-2 text-left text-secondary">
+                    <div class="mb-2"> {{ answer.user.username }}</div>
+                    <div> {{ answer.create_date|datetime }} </div>
                 </div>
             </div>
+
+            <div>
+                {% if g.user == question.user %}
+                <div class="my-3">
+                    <a href="{{ url_for('question.modify', question_id=question.id ) }}" class="btn btn-sm btn-outline-secondary">수정</a>
+                </div>
+                {% endif %}
+            </div>
+
         </div>
     </div>
     {% endfor %}
-
 
     <form action="{{ url_for('answer.create', question_id=question.id) }}" method="post" class="my-3">
         {{ form.csrf_token }}
@@ -38,9 +55,21 @@
         </div>
         {% endfor %}
         <div class="form-group">
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+            <textarea {% if not g.user %} disabled {% endif %} name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
             <input type="submit" value="답변등록" class="btn btn-primary">
     </form>
 </div>
+{% endblock %}
+{% block script %}
+<script type="text/javascript">
+    %(document).ready(function() {
+    $(".delete").on('click', function() {
+            if(confirm("정말로 삭제하시겠습니까?")) {
+                location.href = $(this).data('uri');
+            }
+        }
+    });
+</script>
+
 {% endblock %}
